@@ -41,6 +41,7 @@ class SettingsController
         'api_usage',
         'cache',
         'countries',
+        'crons',
         'currencies',
         'contact_photo',
         'default_activity_types',
